# whoosh-ng

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.fr.md  CHANGELOG.md  MANIFEST.in  README.md  llms-full.txt  llms.txt  output.json  pyproject.toml  pyrightconfig.json
.github/: FUNDING.yml
.github/workflows/: benchmark.yml  codeql.yml  deploy-docs.yml  docs.yml  first-interaction.yml  llms-doc.yml  semantic-release.yml  sync-changelog.yml  test.yml
.kilo/: kilo.json
.kilo/plans/: 1782062323800-type-annotations-modernization.md  1783617590838-whoosh-ng-consolidated-plan.md  1784041469398-release-1.0.0-plan.md  whoosh-ng-async-migration-files-checklist.md  whoosh-ng-async-migration-plan.md  whoosh-reloaded-4-modernization-roadmap.md
benchmark/: __init__.py  __main__.py  dictionary.py  enron.py  marc21.py  reporting.py  reuters.py
dev/bench/: data.js
docs/: Gemfile  README.md  _config.yml
docs/en/: index.md  middleware.md  quickstart.md
docs/en/api/: backends.md  core.md  events.md  fields.md  middleware.md  modern.md  overview.md  plugins.md  query.md  searching.md  writing.md
docs/en/examples/: autocomplete.md  basic-indexing.md  fastapi-search.md  fastapi.md  middleware.md  movie-search.md  plugin-dev.md  search.md  vector-search.md
docs/en/guides/: autocomplete.md  backends.md  core-concepts.md  indexing.md  installation.md  middleware.md  migration.md  monitoring.md  plugins.md  query.md  schema.md  searching.md  translation-status.md  vector.md
docs/fr/: index.md  quickstart.md
docs/fr/api/: backends.md  core.md  events.md  fields.md  middleware.md  modern.md  overview.md  plugins.md  query.md  searching.md  writing.md
docs/fr/examples/: autocomplete.md  basic-indexing.md  fastapi-search.md  fastapi.md  middleware.md  movie-search.md  plugin-dev.md  search.md  vector-search.md
docs/fr/guides/: autocomplete.md  backends.md  core-concepts.md  indexing.md  installation.md  middleware.md  migration.md  monitoring.md  plugins.md  query.md  schema.md  searching.md  vector.md
docs/guides/: translation-status.md
scripts/: generate_llm_docs.py
src/whoosh/: __init__.py  async_writer.py  classify.py  collectors.py  columns.py  event_bus.py  externalsort.py  fields.py  formats.py  highlight.py  hooks.py  idsets.py  index.py  locking.py  multiproc.py  reading.py  scoring.py  searching.py  sorting.py  writing.py
src/whoosh/analysis/: __init__.py  acore.py  analyzers.py  filters.py  intraword.py  morph.py  tokenizers.py
src/whoosh/automata/: fst.py  glob.py
src/whoosh/backends/: __init__.py  abc.py  encryption.py  file.py  lmdb.py  sqlite.py
src/whoosh/codec/: base.py  memory.py  plaintext.py  whoosh2.py  whoosh3.py
src/whoosh/filedb/: fileindex.py  filereading.py  filestore.py  filetables.py  filewriting.py  gae.py  misc.py  pools.py  structfile.py
src/whoosh/lang/: dmetaphone.py  isri.py  morph_en.py  porter.py
src/whoosh/lang/snowball/: bases.py  danish.py  dutch.py  english.py  finnish.py  french.py  german.py  hungarian.py  italian.py  norwegian.py  portugese.py  romanian.py  russian.py  spanish.py  swedish.py
src/whoosh/matching/: __init__.py  binary.py  combo.py  mcore.py  wrappers.py
src/whoosh/middleware/: __init__.py  base.py  chain.py  context.py  exceptions.py  integration.py  metrics.py  registry.py  wrappers.py
src/whoosh/plugins/: __init__.py  manager.py  storage_base.py  vector_base.py
src/whoosh/providers/: __init__.py  hnsw.py
src/whoosh/qparser/: __init__.py  dateparse.py  default.py  plugins.py  syntax.py
src/whoosh/query/: autocomplete.py  compound.py  nested.py  positional.py  ranges.py  spans.py  terms.py  wrappers.py
src/whoosh/registry/: __init__.py  base.py
src/whoosh/support/: base85.py  bench.py  bitvector.py  charset.py  pyparsing.py  relativedelta.py
src/whoosh/util/: __init__.py  cache.py  filelock.py  loading.py  testing.py  times.py
src/whoosh/utils/: __init__.py  async_utils.py
src/whoosh/vector/: __init__.py  base.py
src/whoosh_admin/: __init__.py
src/whoosh_fastapi/: __init__.py
src/whoosh_modern/: __init__.py
src/whoosh_modern/autocomplete/: __init__.py  edge_ngram.py  factory.py  plugin.py  provider.py
src/whoosh_modern/vector/: __init__.py  base.py  numpy_provider.py  plugin.py
stress/: test_bigsort.py  test_bigtable.py  test_hugeindex.py  test_update.py
tests/: benchmark_async.py  test_analysis.py  test_autocomplete.py  test_automata.py  test_backends.py  test_codecs.py  test_collector.py  test_columns.py  test_dateparse.py  test_encryption.py  test_event_bus.py  test_fastapi_async.py  test_fastapi_plugin.py  test_fields.py  test_fuzz.py  test_highlighting.py  test_hooks.py  test_indexing.py  test_matching.py  test_middleware.py  test_middleware_async.py  test_modern_autocomplete.py  test_modern_vector.py  test_mpwriter.py  test_nested.py  test_parse_plugins.py  test_parsing.py  test_plugin_manager.py  test_plugin_manager_async.py  test_plugins.py  test_provider_architecture.py  test_providers.py  test_quality.py  test_queries.py  test_reading.py  test_registry.py  test_results.py  test_run_sync.py  test_searching.py  test_sorting.py  (+7 more)
